# jetmd

./: .gitignore  .lintstagedrc.json  .npmrc  AGENTS.md  CLAUDE.md  Cargo.toml  PR_DESCRIPTION.md  README.md  STATUS.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.release.mjs  test-astro-docs.js  test-comprehensive.js  test-direct.js  test-gfm.js  test-wasm.js
.changeset/: README.md  config.json
.github/: release-template.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  performance_targets.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
crates/fmd-cli/: Cargo.toml
crates/fmd-cli/src/: main.rs
crates/fmd-core/: Cargo.toml
crates/fmd-core/src/: ast.rs  error.rs  incremental.rs  inline.rs  lib.rs  parser_impl.rs  position.rs  rope.rs  scanner.rs
crates/fmd-core/tests/: incremental_contract.rs  parse_contract.rs
crates/fmd-gfm/: Cargo.toml
crates/fmd-gfm/src/: autolink.rs  lib.rs  strikethrough.rs  table.rs
crates/fmd-html/: Cargo.toml
crates/fmd-html/src/: lib.rs  sanitize.rs  visitor.rs
crates/fmd-html/tests/: render_contract.rs
crates/fmd-slug/: Cargo.toml
crates/fmd-slug/src/: lib.rs
crates/fmd-wasm/: Cargo.toml
crates/fmd-wasm/src/: lib.rs  parse.rs  render.rs  session.rs
crates/fmd-wasm/tests/: parse_wasm.rs  render_wasm.rs  session_wasm.rs
crates/mdx-core/: Cargo.toml
crates/mdx-core/src/: lib.rs
demo/: API.html  API.md  CHANGELOG.html  CHANGELOG.md  README.html  README.md  performance-comparison.js  real-world-test.js
docs/: RELEASE.md  WASM_SETUP.md  api.md  compatibility.md  migration.md  post-release-checklist.md
examples/: basic-usage.js  incremental-parsing.js
examples/astro-example/: astro.config.mjs  package.json
examples/astro-example/src/content/: config.ts
examples/astro-example/src/content/blog/: first-post.md
examples/astro-example/src/layouts/: Layout.astro
examples/astro-example/src/pages/: index.astro
scripts/: build-release.sh  verify-release.sh
specs/001-faster-md-mdx/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-faster-md-mdx/contracts/: node-api.md  rust-api.md  wasm-api.md
tests/benchmarks/: latency.rs  memory.rs  wasm_perf.js
tests/conformance/: commonmark.rs  gfm.rs
tests/fixtures/mdx/: basic.mdx  complex.mdx
