[workspace]
resolver = "2"
members = [
    "crates/fmd-core",
    "crates/fmd-gfm",
    "crates/fmd-html",
    "crates/fmd-slug",
    "crates/fmd-wasm",
    "crates/fmd-cli",
    "crates/mdx-core",
]

[workspace.package]
version = "0.1.0"
authors = ["JetMD Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/jetmd"
homepage = "https://github.com/yourusername/jetmd"
rust-version = "1.75"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Parser dependencies
nom = "7.1"
winnow = "0.5"

# WASM dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"

# Utility dependencies
once_cell = "1.19"
indexmap = "2.1"

# Testing dependencies
proptest = "1.4"
criterion = "0.5"
insta = "1.34"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package.fmd-wasm]
opt-level = "z"  # Optimize for size in WASM

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"