[package]
name = "fmd-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Core parser and AST for faster-md"

[dependencies]
memchr = "2.7"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
criterion = "0.5"

[[bench]]
name = "latency"
harness = false
path = "../../tests/benchmarks/latency.rs"

[[bench]]
name = "memory"
harness = false
path = "../../tests/benchmarks/memory.rs"