[package]
name = "fmd-gfm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "GitHub Flavored Markdown extensions for faster-md"

[dependencies]
fmd-core = { path = "../fmd-core" }
serde = { workspace = true }

[dev-dependencies]
insta = { workspace = true }