[package]
name = "fmd-html"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
exclude = [
  "tests/**",
  "benches/**",
  "examples/**",
  "fixtures/**",
  "scripts/**",
  "docs/**",
]

description = "HTML renderer for faster-md AST"

[dependencies]
ammonia = "4.0"
fmd-core = { path = "../fmd-core" }
serde = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
