[package]
name = "fmd-slug"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Stable slug generation for faster-md"

[dependencies]

[dev-dependencies]
insta = { workspace = true }