[package]
name = "fmd-slug"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
exclude = [
  "tests/**",
  "benches/**",
  "examples/**",
  "fixtures/**",
  "scripts/**",
  "docs/**",
]

description = "Stable slug generation for faster-md"

[dependencies]

[dev-dependencies]
insta = { workspace = true }
