[package]
name = "fmd-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "WASM bindings for faster-md"

[lib]
crate-type = ["cdylib"]

[dependencies]
fmd-core = { path = "../fmd-core" }
fmd-html = { path = "../fmd-html" }
fmd-gfm = { path = "../fmd-gfm" }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"