[package]
name = "fmd-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
exclude = [
  "tests/**",
  "benches/**",
  "examples/**",
  "fixtures/**",
  "scripts/**",
  "docs/**",
]

description = "WASM bindings for faster-md"

[lib]
crate-type = ["cdylib"]

[dependencies]
fmd-core = { path = "../fmd-core" }
fmd-html = { path = "../fmd-html" }
fmd-gfm = { path = "../fmd-gfm" }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
